[build-system]
build-backend = 'scikit_build_core.build'
requires = [
    'cmake>=3.25',
    'numpy >= 1.23',
    'scikit-build-core',
    'wheel',
]

[project]
dependencies = ['numpy>=1.23']
description = 'Serialbox - Serialization Library for C, C++, Fortran and Python'
name = 'serialbox4py'
# note: version should not be changed manually, use bump-my-version instead:
# install: pip install bump-my-version
# example: bump-my-version bump patch
version = '2.6.2'
license = {text = "BSD-3 License"}
readme = {file = 'README.md', content-type = 'text/markdown'}

[project.urls]
repository = 'https://github.com/GridTools/serialbox'

[project.optional-dependencies]
test = ['pytest', 'pytest-cache']

[tool.scikit-build]
minimum-version = '0.5'
cmake.minimum-version = '3.25'
cmake.verbose = true
cmake.source-dir = "."
cmake.build-type = "Release"
cmake.args = [
    "-DSERIALBOX_ENABLE_FORTRAN=false",
    "-DSERIALBOX_ENABLE_SDB=false",
    "-DSERIALBOX_ASYNC_API=false",
#    "-DCMAKE_LIBRARY_OUTPUT_DIRECTORY="
]
wheel.expand-macos-universal-tags = true
wheel.install-dir = "serialbox"
wheel.packages = []
wheel.license-files = []
